# vpn-router

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  PLAN.md  QUICKSTART.md  README.en.md  README.md  docker-compose.macvlan.yml  docker-compose.wg-clients.yml  docker-compose.yml  example.env  requirements-test.txt  requirements.txt
config/: custom-rules.json  domain-catalog.json  geoip-catalog.json  geosite.db  settings.json  sing-box.json
docs/: UNIFIED_ARCHITECTURE_PLAN.md  frontend.md
frontend/: .dockerignore  .env.example  README.md  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend-new/: index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
pia/: CHANGELOG.md  pia_onesky.js  qtcbuild.sh
rust-router/: Cargo.toml
rust-router/benches/: ab_comparison.rs  batch_io.rs  dns_parsing.rs  rule_matching.rs  throughput.rs
rust-router/docs/: PHASE0_REPORT.md
rust-router/scripts/: ab_comparison_test.py  bench_1c1g.sh  generate_test_vectors.py  iptables_compat.sh  kernel_check.sh
rust-router/src/: error.rs  lib.rs  main.rs
rust-router/src/chain/: allocator.rs  dscp.rs  manager.rs  mod.rs  two_phase.rs
rust-router/src/config/: loader.rs  mod.rs  types.rs
rust-router/src/connection/: manager.rs  mod.rs  stats.rs  tcp.rs  udp.rs  udp_processor.rs  udp_reply.rs
rust-router/src/dns/: config.rs  error.rs  mod.rs
rust-router/src/dns/cache/: entry.rs  key.rs  mod.rs  negative.rs
rust-router/src/dns/client/: doh.rs  dot.rs  health.rs  mod.rs  pool.rs  tcp.rs  traits.rs  udp.rs
rust-router/src/dns/filter/: blocklist.rs  cname.rs  mod.rs  response.rs
rust-router/src/dns/log/: mod.rs  rotation.rs  writer.rs
rust-router/src/dns/server/: handler.rs  mod.rs  rate_limit.rs  tcp.rs  udp.rs
rust-router/src/dns/split/: mod.rs  router.rs
rust-router/src/ecmp/: group.rs  lb.rs  mod.rs
rust-router/src/egress/: config.rs  error.rs  manager.rs  mod.rs  reply.rs
rust-router/src/fakedns/: cache.rs  config.rs  manager.rs  mod.rs  pool.rs  processor.rs  server.rs  tcp_server.rs  udp_server.rs
rust-router/src/ingress/: config.rs  dns_cache.rs  error.rs  forwarder.rs  manager.rs  mod.rs  processor.rs  socks5_server.rs
rust-router/src/ingress/ipstack_bridge/: bridge.rs  config.rs  dns_hijack.rs  domain_resolver.rs  mod.rs  packet_channel.rs  session_tracker.rs  sharded_bridge.rs
rust-router/src/io/: batch_io.rs  buffer.rs  buffer_pool.rs  copy.rs  mod.rs
rust-router/src/ipc/: handler.rs  mod.rs  protocol.rs  server.rs
rust-router/src/outbound/: block.rs  direct.rs  manager.rs  mod.rs  shadowsocks.rs  socks5.rs  socks5_common.rs  socks5_udp.rs  traits.rs  vless.rs  wg_egress_bridge.rs  wireguard.rs
rust-router/src/peer/: health.rs  ip_allocator.rs  manager.rs  mod.rs  pairing.rs  port_allocator.rs  validation.rs
rust-router/src/quic_inbound/: config.rs  error.rs  listener.rs  mod.rs
rust-router/src/reality/: auth.rs  certificate.rs  client.rs  common.rs  config.rs  error.rs  mod.rs  server.rs  stream.rs
rust-router/src/reality/crypto/: aead.rs  cipher_suite.rs  keys.rs  mod.rs  x25519.rs
rust-router/src/reality/tls/: messages.rs  mod.rs  records.rs
rust-router/src/rules/: domain.rs  engine.rs  fwmark.rs  geoip.rs  mod.rs  types.rs
rust-router/src/shadowsocks/: config.rs  error.rs  mod.rs
rust-router/src/smoltcp_utils/: config.rs  error.rs  mod.rs  port_allocator.rs  session.rs  socket_guard.rs
rust-router/src/sniff/: http.rs  mod.rs  quic.rs  quic_decrypt.rs  result.rs  tls.rs
rust-router/src/ss_inbound/: config.rs  error.rs  handler.rs  listener.rs  mod.rs  udp_relay.rs
rust-router/src/tproxy/: connection.rs  listener.rs  mod.rs  socket.rs  udp_listener.rs  udp_worker.rs
rust-router/src/transport/: error.rs  mod.rs  quic.rs  tcp.rs  tls.rs  websocket.rs
rust-router/src/tunnel/: config.rs  handshake.rs  mod.rs  simple_tcp_proxy.rs  smoltcp_bridge.rs  smoltcp_device.rs  smoltcp_http_client.rs  traits.rs  userspace.rs
rust-router/src/vision/: detector.rs  error.rs  mod.rs  stream.rs
rust-router/src/vless/: account.rs  addons.rs  error.rs  mod.rs  protocol.rs  stream.rs
rust-router/src/vless_inbound/: config.rs  error.rs  handler.rs  listener.rs  mod.rs
rust-router/src/vless_wg_bridge/: bridge.rs  config.rs  error.rs  mod.rs  port_allocator.rs  reply_registry.rs  session.rs  socket_guard.rs  udp_frame.rs
rust-router/src/warp/: config.rs  error.rs  mod.rs  register.rs
rust-router/tests/: integration_tests.rs  rule_parity.rs
rust-router/tests/fixtures/: dscp_chain_test_vectors.json  failover_test_vectors.json  rule_test_vectors.json
rust-router/tests/fixtures/phase6/: chain_test_vectors.json  dscp_test_vectors.json  pairing_test_vectors.json
rust-router/tests/integration/: ab_comparison.rs  chaos.rs  dns_ipc.rs  domain_routing.rs  dscp_chain.rs  e2e.rs  failover_integration.rs  handshake_integration.rs  memory_stability.rs  mod.rs  phase6_2pc.rs  phase6_chain.rs  phase6_pairing.rs  security.rs  socks5_integration.rs  stability.rs  wireguard_integration.rs
scripts/: api_server.py  chain_route_manager.py  convert_adblock.py  db_helper.py  detect_vmess_trojan.py  diagnose_tcp.sh  dscp_manager.py  ecmp_manager.py  entrypoint.sh  export_geoip_json.py  fetch-geodata.sh  get_wg_config.py  health_checker.py  init_geodata_db.py  init_user_db.py  integration_test.py  key_manager.py  log_config.py  openvpn_manager.py  parse_domain_list.py  parse_ip_list.py  peer_pairing.py  peer_tunnel_manager.py  relay_config_manager.py  render_routing_config.py  render_singbox.py  rust_router_client.py  rust_router_manager.py  setup-wg.sh  setup_kernel_wg.py  setup_kernel_wg_egress.py  setup_wg_test_clients.sh  socks5_proxy.py  test_pia_connection.sh  test_pia_simple.sh  test_protocol_setup.py  test_throughput.py  test_warp_registration.py  tunnel_api_client.py  v2ray_stats.proto  (+10 more)
tests/: conftest.py
xray-client-debug/: config.json  docker-compose.yml
xray-lite/: .gitignore  Dockerfile  README.md  build-release.sh  build.sh  go.mod  (+1 more)
(+1364 files in other folders)
