[package]
name = "rust-router"
version = "0.1.0"
edition = "2021"
description = "High-performance transparent proxy router with TPROXY support"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "macros", "rt-multi-thread", "signal"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration and hot-reload (Phase 2)
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bytes handling
bytes = "1"

[[bin]]
name = "rust-router"
path = "src/main.rs"

[[bin]]
name = "tproxy_poc"
path = "src/bin/tproxy_poc.rs"

[[bin]]
name = "udp_tproxy_poc"
path = "src/bin/udp_tproxy_poc.rs"
