[package]
name = "rust-router"
version = "0.1.0"
edition = "2021"
description = "High-performance transparent proxy router with TPROXY support"
license = "MIT"
authors = ["VPN Router Team"]
repository = "https://github.com/vpn-router/rust-router"
keywords = ["proxy", "tproxy", "transparent-proxy", "networking", "vpn"]
categories = ["network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Async trait support
async-trait = "0.1"

# Networking
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration and hot-reload
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bytes handling
bytes = "1"

# Concurrent data structures
dashmap = "5"

# Caching with LRU eviction
moka = { version = "0.12", features = ["sync"] }

# Connection pooling
deadpool = "0.10"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Rule matching
regex = "1"
ipnet = "2"
aho-corasick = "1"

# Cryptographic hashing
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "rust-router"
path = "src/main.rs"

[[bin]]
name = "tproxy_poc"
path = "src/bin/tproxy_poc.rs"

[[bin]]
name = "udp_tproxy_poc"
path = "src/bin/udp_tproxy_poc.rs"

[lib]
name = "rust_router"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[[bench]]
name = "rule_matching"
harness = false
