[package]
name = "rust-router"
version = "0.1.0"
edition = "2021"
description = "High-performance transparent proxy router with TPROXY support"
license = "MIT"
authors = ["VPN Router Team"]
repository = "https://github.com/vpn-router/rust-router"
keywords = ["proxy", "tproxy", "transparent-proxy", "networking", "vpn"]
categories = ["network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Async trait support
async-trait = "0.1"

# Async utilities
futures = "0.3"

# Networking
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration and hot-reload
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bytes handling
bytes = "1"

# Concurrent data structures
dashmap = "5"
crossbeam-queue = "0.3"
once_cell = "1"

# CPU detection
num_cpus = "1.16"

# Caching with LRU eviction
moka = { version = "0.12", features = ["sync"] }

# Connection pooling
deadpool = "0.10"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Rule matching
regex = "1"
ipnet = { version = "2", features = ["serde"] }
aho-corasick = "1"

# Cryptographic hashing
md-5 = "0.10"

# Base64 encoding
base64 = "0.22"

# WireGuard userspace implementation
boringtun = "0.6"

# Random number generation
rand = "0.8"

# x25519 key exchange for WARP registration (match boringtun version)
x25519-dalek = "=2.0.0-rc.3"

# Hex encoding for install_id
hex = "0.4"

# Parking lot for efficient synchronization
parking_lot = "0.12"

# Binary serialization
bincode = "1.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Hostname detection
hostname = "0.3"

# DNS protocol
hickory-proto = "0.24"

# Rate limiting
governor = "0.6"

# Userspace TCP/IP stack for tunnel HTTP client
smoltcp = { version = "0.11", default-features = false, features = ["medium-ip", "proto-ipv4", "socket-tcp", "alloc"] }

# HTTP for DoH (hyper replaces reqwest - reduces binary size)
hyper = { version = "1.4", features = ["client", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http2"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.27", features = ["http2"], optional = true }

# TLS for DoT
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

# HTTP types
http = { version = "1", optional = true }

[features]
default = ["dns-doh", "dns-dot", "handshake_retry"]
dns-doh = ["hyper", "hyper-util", "http-body-util", "hyper-rustls", "http", "rustls", "rustls-pki-types", "webpki-roots"]
dns-dot = ["tokio-rustls", "rustls", "rustls-pki-types", "webpki-roots"]
# Handshake retry with exponential backoff to prevent busy loop on invalid egress
handshake_retry = []

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serial_test = "3"

[[bin]]
name = "rust-router"
path = "src/main.rs"

[[bin]]
name = "tproxy_poc"
path = "src/bin/tproxy_poc.rs"

[[bin]]
name = "udp_tproxy_poc"
path = "src/bin/udp_tproxy_poc.rs"

[[bin]]
name = "warp_register_poc"
path = "src/bin/warp_register_poc.rs"

[lib]
name = "rust_router"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[[bench]]
name = "rule_matching"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "ab_comparison"
harness = false

[[bench]]
name = "batch_io"
harness = false

[[bench]]
name = "dns_parsing"
harness = false
